reflectionuserapi/src/ReflectUser.API/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: reflectuser
spec:
  type: ClusterIP
  selector:
    app: reflectuser-pod
  ports:
  - port: 80
