reflectionuserapi/src/ReflectUser.API/manifests/manifest-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reflectuser-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: reflectuser
          servicePort: 80
        path: /users(/|$)(.*)
